rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-opacity-attrib.rnc.snap
---
source: rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    components: [
                        "a",
                    ],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Definition(
                        Definition {
                            name: Identifier {
                                components: [
                                    "SVG",
                                    "opacity",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "opacity",
                                                ],
                                            },
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "OpacityValue",
                                                    "datatype",
                                                ],
                                            },
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                components: [
                                    "SVG",
                                    "fill-opacity",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "fill-opacity",
                                                ],
                                            },
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "OpacityValue",
                                                    "datatype",
                                                ],
                                            },
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                components: [
                                    "SVG",
                                    "stroke-opacity",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "stroke-opacity",
                                                ],
                                            },
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "OpacityValue",
                                                    "datatype",
                                                ],
                                            },
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                components: [
                                    "SVG",
                                    "Opacity",
                                    "extra",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                components: [
                                    "SVG",
                                    "Opacity",
                                    "attrib",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "SVG",
                                                    "opacity",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "SVG",
                                                    "fill-opacity",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "SVG",
                                                    "stroke-opacity",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                components: [
                                                    "SVG",
                                                    "Opacity",
                                                    "extra",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
