rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-profile.rnc.snap
---
source: rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/2000/svg",
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Definition(
                        Definition {
                            name: "SVG.Profile.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Profile.attrib",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "color-profile",
                                                },
                                            ),
                                            pattern: Text,
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Profile.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Profile.extra.class",
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Profile.class",
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "color-profile",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Profile.extra.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.color-profile.content",
                            combine: None,
                            pattern: Many0(
                                Name(
                                    Name {
                                        prefix: None,
                                        local: "SVG.Description.class",
                                    },
                                ),
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: "color-profile",
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: "color-profile",
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "attlist.color-profile",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.color-profile.content",
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: "attlist.color-profile",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.XLink.attrib",
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "local",
                                                },
                                            ),
                                            pattern: Text,
                                        },
                                    ),
                                    Attribute {
                                        name_class: Name(
                                            Name {
                                                prefix: None,
                                                local: "name",
                                            },
                                        ),
                                        pattern: Text,
                                    },
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "rendering-intent",
                                                },
                                            ),
                                            pattern: Choice(
                                                [
                                                    Value {
                                                        name: Some(
                                                            Name {
                                                                prefix: None,
                                                                local: "string",
                                                            },
                                                        ),
                                                        value: "auto",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            Name {
                                                                prefix: None,
                                                                local: "string",
                                                            },
                                                        ),
                                                        value: "perceptual",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            Name {
                                                                prefix: None,
                                                                local: "string",
                                                            },
                                                        ),
                                                        value: "relative-colorimetric",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            Name {
                                                                prefix: None,
                                                                local: "string",
                                                            },
                                                        ),
                                                        value: "saturation",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            Name {
                                                                prefix: None,
                                                                local: "string",
                                                            },
                                                        ),
                                                        value: "absolute-colorimetric",
                                                    },
                                                ],
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
