rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-qname.rnc.snap
---
source: rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "xlink",
                uri: "http://www.w3.org/1999/xlink",
            },
        ),
    ],
    body: Grammar(
        Grammar {
            contents: [
                Definition(
                    Definition {
                        name: "XLINK.xmlns.attrib",
                        combine: None,
                        pattern: Empty,
                    },
                ),
                Definition(
                    Definition {
                        name: "SVG.xmlns.attrib",
                        combine: None,
                        pattern: Group(
                            [
                                Empty,
                                Name(
                                    Name {
                                        prefix: None,
                                        local: "XLINK.xmlns.attrib",
                                    },
                                ),
                            ],
                        ),
                    },
                ),
            ],
        },
    ),
}
